# Bachelorarbeit

./: .bashrc  .gitignore  .gitmodules  .plot.py.kate-swp  DEVELOPER_MANUAL.md  INTERFACE_MANUAL.md  LICENSE  README.md  USER_MANUAL.md  frames_2025-05-27_23.10.38.gv  frames_2025-07-31_13.04.39.gv  frames_2025-07-31_13.07.58.gv  frames_2025-07-31_13.53.43.gv  frames_2025-07-31_13.56.49.gv  plot.py  test_ws.pro
src/my_first_pkg/: CMakeLists.txt  package.xml
src/my_first_pkg/src/: my_noed.cpp  plus_minus.cpp  test_UI.cpp
src/path_planning_eval/: CMakeLists.txt  package.xml
src/path_planning_eval/msg/: ExploredPtPlus.msg  ExtendedMap.msg  GeneratedPoint.msg  RobotDescription.msg
src/path_planning_eval/srv/: PlanPath.srv  ProcessMap.srv
src/test_qt_pkg/: .clang-format  CMakeLists.txt  Doxyfile  package.xml
src/test_qt_pkg/config/: amcl.yaml  custom_IZ_floor_1_5cm.world  custom_cave.world  custom_cave_map.yaml  custom_nav2_params.yaml  custom_nav2_params_fun_map.yaml  custom_nav2_params_institut.yaml  default_rviz.rviz
src/test_qt_pkg/config/custom_maps/: IZ_floor2_5cm.yaml  IZ_floor_0_5cm_furnished.yaml  custom_fun_map.pgm  custom_fun_map.yaml
src/test_qt_pkg/include/test_qt_pkg/: bridge_protocol.h  cam.h  control_widget_wrapper.h  ego_widget.h  joystick.h  laser_map_widget.h  mainwindow.h  map_simulator.h  map_subscriber.h  movable_widget.h  nav2client.h  obstacle_map_widget.h  robot_node.h  scan_zone.h  stop_button.h  touch_slider.h  touch_slider_horizontal.h  touch_slider_vertical.h  touch_test.h  wheel.h  wheelstyle.h
src/test_qt_pkg/launch/: bridge_sim_launch.py  default_sim.launch.py  institut_sim_launch.py  robotino_bridge.launch
src/test_qt_pkg/msg/: FoundPath.msg  ParentAdjustment.msg
src/test_qt_pkg/src/: cam.cpp  cmd_vel_relay.cpp  compressed_to_raw.cpp  control_widget_wrapper.cpp  ego_widget.cpp  joystick.cpp  laser_map_widget.cpp  listener_node.cpp  main.cpp  mainwindow.cpp  map_simulator.cpp  map_subscriber.cpp  movable_widget.cpp  nav2client.cpp  obstacle_map_widget.cpp  receiver_node.cpp  robot_node.cpp  stop_button.cpp  tcp_robot_listener.cpp  tcp_vel_client.cpp  touch_slider.cpp  touch_slider_horizontal.cpp  touch_slider_vertical.cpp  touch_test.cpp  wheel.cpp
src/test_qt_pkg/ui/: mainwindow.ui
